src/test/deca/syntax/valid/provided/modulo.deca
// Description:
//    Programme faisant correctement l'opération de modulo
//
// Resultats: 2
// 
//
// Historique:
//    cree le 01/01/2022

{
        int x = 30;
	int y = 4;
	int r;
	r = x%y;
	println(r);
}
